# rosegarden-2.1-IRIX-6.5

./: ANNOUNCEMENT  CHANGES  COPYRIGHT  INSTALL  IRIX-CHANGES  IRIX-CHANGES.md  Makefile.in  Makefile.noconfig  Makefile.old  PORTING  README  README.md  Rosegarden  build-irix.sh  config.h.in  configure  configure.in  do-install  irix-changes.md  tclmidi
common/bitmaps/: back.xbm  buffer.xbm  chordmod_accent.xbm  chordmod_dash.xbm  chordmod_dot.xbm  chordmod_legato.xbm  chordmod_pause.xbm  chordmod_rfz.xbm  chordmod_sfz.xbm  chordmod_trill.xbm  chordmod_turn.xbm  clef_alto.xbm  clef_bass.xbm  clef_tenor.xbm  clef_treble.xbm  dot.xbm  drag.xbm  drag_mask.xbm  ffwd.xbm  forward.xbm  grey.xbm  hour0.xbm  hour1.xbm  hour2.xbm  hour3.xbm  hour4.xbm  hour5.xbm  hour6.xbm  hour7.xbm  hourglass.xbm  hourglass_mask.xbm  lightgrey.xbm  note_bodyempty.xbm  note_bodyfilled.xbm  notemod_flat.xbm  notemod_natural.xbm  notemod_sharp.xbm  old-notemod_flat.xbm  old-notemod_natural.xbm  old-notemod_sharp.xbm  (+31 more)
common/help/: rosehelp.hnx  rosehelp.info
common/include/: Debug.h  ServiceNames.h  SysDeps.h  Version.h
editor/src/: Classes.h  Constructors.c  Dechord.c  Dechord.h  Draw.h  DrawElements.c  DrawGroups.c  DrawMTElements.c  DrawMTGroups.c  DrawMTStave.c  DrawOTElements.c  DrawOTGroups.c  DrawOTStave.c  DrawPMX.c  Equation.c  Equation.h  Fallbacks.h  Filter.c  Filter.c_  Format.c  Format.h  GC.c  GC.h  General.h  IO.c  IO.h  ItemList.c  ItemList.h  MTime.c  MTime.h  Main.c  Makefile  Makefile.dist  Marks.c  Marks.h  Menu.c  Menu.h  MenuBar.c  MenuChord.c  MenuEdit.c  (+33 more)
include/: ILServer.h  ILTypes.h  Mapper_GENERIC.h  Mapper_OSS.h  Mapper_ZILOG.h  MidiErrorHandler.h  MidiEvent.h  MidiXInclude.h  Yawn.h
interlock/include/: ILClient.h
interlock/src/: ILClient.c  ILServer.c  Makefile
lists/include/: Lists.h
lists/src/: Lists.c  Makefile  Makefile.dist
mapper/: SUPPORT
mapper/include/: Mapper.h  Mapper_SGI.h  Systems.h
mapper/src/: Device.c  Makefile  Mapper.c  Mapper_OSS.c  Mapper_SGI.c  Mapper_STUB.c  Mapper_ZILOG.c  Timer.c  Timer_OSS.c  Timer_SGI.c  Timer_STUB.c  Timer_ZILOG.c
midi/include/: MidiBHeap.h  MidiConsts.h  MidiFile.h  MidiTrack.h  MidiVarLenNums.h
midi/src/: BHeap.c  ErrorHandler.c  Event.c  File.c  Makefile  Track.c  VarLenNums.c
miditools/: Makefile  README  dump-midi-events.c  test-midi-devices.c  test-midi-timing.c
petal/: Makefile.in  Petal.c  Petal.tcl  README  dump.tcl  fakeecho  harmonizer.tcl  pattern.tcl  rawdump
petal/petaleditor/: Makefile  PetalEditor.tcl  tclIndex
petal/petalmidi/: Makefile  PetalMidi.tcl  tclIndex
regexp/include/: Regexp.h
regexp/src/: Makefile  Makefile.dist  README  regerror.c  regexp.c  regmagic.h  regsub.c
scripts/: INSTALL.bindist  make-bindist.sh  make-cvsclean.sh  make-structure.sh
sequencer/src/: Clipboard.c  Clipboard.h  Consts.h  Csound.c  Csound.h  Dispatch.c  Dispatch.h  EventDlgs.c  EventDlgs.h  EventListMenu.c  EventListMenu.h  EventListWindow.c  EventListWindow.h  Fallbacks.h  Filter.c  Globals.h  Hooks.h  Main.c  Main.h  MainWindow.c  MainWindow.h  Makefile  Makefile.dist  Menu.c  Menu.h  Message.c  Message.h  MidiSetupDlgs.c  MidiSetupDlgs.h  Parse.c  Parse.h  PianoRoll.c  PianoRoll.h  PianoRollMenu.c  PianoRollMenu.h  Record.c  Record.h  Resources.h  Sequence.c  Sequence.h  (+7 more)
song/: EvTrDefs.h  EvntTree.cxx  EvntTree.h  Makefile.in  Song.cxx  Song.h
tclmidi/: ChangeLg  DEVICES  INSTALL  Makefile.in  PTHREADS  README  TODO  TclmIntp.cxx  TclmIntp.h  configure  configure.in  midtotcl.dist  minfo.dist  mplay.dist  mrec.dist  patchlvl.h  pkgIndex.tcl  tclmCmd.cxx  tclmEvnt.cxx  tclmEvnt.h  tclmPlay.cxx  tclmPtch.cxx  tclmUtil.cxx  tclmidi.h
tclmidi/contrib/: Makefile  README  mbuild  mmap.mt32  mmerge  mmet  msplit  playzip
tclmidi/device/: Makefile  Makefile.in  MidiDev.cxx  MidiDev.h  TclmDr75.cxx  TclmDr75.h
tclmidi/doc/: trials.me
tclmidi/drivers/: Makefile.linux  Makefile.man  Makefile.unixware  README  README.bsdi  README.freebsd  README.linux  README.netbsd  README.serial  README.unixware  iface_gravis.c  iface_gravis.h  iface_mpu401.c  iface_mpu401.h  iface_mpu401_uart.c  iface_mqx32.c  iface_mqx32.h  iface_sb.c  iface_sb.h  iface_serial.c  iface_serial.h  midi.4  midi.c  midiioctl.h  sup_event.h  sup_export.h  sup_iface.c  sup_iface.h  sup_pnp.c  sup_pnp.h  sup_quad.c  sup_quad.h  sup_softc.h  sup_stynamic.c  sup_stynamic.h  sup_timer.c  sup_timer.h  sup_timer_list.c  sup_timer_list.h  sup_var.h  (+18 more)
tclmidi/drivers/SVR4_ID/: Master  Node  Space.c  System
tclmidi/events/: AllEvent.h  ChanPres.cxx  ChanPres.h  Event.cxx  Event.h  EvntUtil.cxx  EvntUtil.h  KeyPres.cxx  KeyPres.h  MChanPrf.cxx  MChanPrf.h  MCopy.cxx  MCopy.h  MCue.cxx  MCue.h  MEOT.cxx  MEOT.h  MEvent.cxx  MEvent.h  MInstNam.cxx  MInstNam.h  MKey.cxx  MKey.h  MLyric.cxx  MLyric.h  MMarker.cxx  MMarker.h  MPortNum.cxx  MPortNum.h  MSMPTE.cxx  MSMPTE.h  MSeqNam.cxx  MSeqNam.h  MSeqNum.cxx  MSeqNum.h  MSeqSpec.cxx  MSeqSpec.h  MTempo.cxx  MTempo.h  MText.cxx  (+23 more)
tclmidi/man/: Makefile  Makefile.in  midiconf.n  midicopy.n  mididel.n  mididev.n  midievnt.n  midifeat.n  midifree.n  midiget.n  midigrep.n  midimake.n  midimerg.n  midimove.n  midiplay.n  midiput.n  midiread.n  midirec.n  midirecv.n  midirew.n  midisend.n  midisplt.n  midistop.n  miditime.n  miditrck.n  midivers.n  midiwait.n  midiwrit.n  midtotcl.1  minfo.1  mplay.1  mrec.1  tclmidi.1
tclmidi/patch/: GusPatch.cxx  GusPatch.h  Makefile  Makefile.in  patch_test.cxx
tclmidi/rb/: Makefile  Makefile.in  README  list.c  list.h  main.c  rb.c  rb.h
tclmidi/smf/: Makefile  Makefile.in  SMFHead.cxx  SMFHead.h  SMFTrack.cxx  SMFTrack.h  SMFUtils.cxx  SMFUtils.h
tclmidi/song/: Makefile
tclmidi/tests/: README  put.test  putget.test  rw.test
tests/: copy.test  delete.test  drange.test  merge.test  midigrep.test  move.test  split.test
topbox/src/: Fallbacks.h  General.h  Main.c  Makefile  Makefile.dist  Remote.c  Remote.h  Resources.h  Visuals.c  Visuals.h  Widgets.c  Widgets.h
yawn/bitmaps/: darkgrey.xbm  down.xbm  down_arrow.xbm  grey.xbm  left.xbm  left_arrow.xbm  (+3 more)
(+51 files in other folders)
